[gd_scene load_steps=5 format=3 uid="uid://f4ax0ctfqkgv"]

[ext_resource type="Script" path="res://examples/examples_menu.gd" id="1_erut4"]
[ext_resource type="Texture2D" uid="uid://c7lgk28i4ps8i" path="res://icon.svg" id="2_340vx"]
[ext_resource type="Script" path="res://examples/example_menu_button.gd" id="3_jxaps"]
[ext_resource type="PackedScene" uid="uid://co2amclkdu4x6" path="res://examples/preferences/preferences.tscn" id="4_sr0v6"]

[node name="ExamplesMenu" type="Node2D"]
script = ExtResource("1_erut4")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ExamplesMenu" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -171.5
offset_top = -107.0
offset_right = 171.5
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="ExamplesMenu"]
custom_minimum_size = Vector2(96, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_340vx")
expand_mode = 4

[node name="Title" type="Label" parent="ExamplesMenu"]
custom_minimum_size = Vector2(2.08165e-12, 24)
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Godot Gameplay Systems"

[node name="SubTitle" type="Label" parent="ExamplesMenu"]
custom_minimum_size = Vector2(2.08165e-12, 64)
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Examples"
horizontal_alignment = 1

[node name="ExampleButtons" type="VBoxContainer" parent="ExamplesMenu"]
layout_mode = 2

[node name="Simple2DPlatformer" type="Button" parent="ExamplesMenu/ExampleButtons"]
layout_mode = 2
text = "Simple 2D platformer"
script = ExtResource("3_jxaps")
scene_to_load = "res://examples/simple_2d_platformer/levels/test_level.tscn"

[node name="DoomLikeFPS" type="Button" parent="ExamplesMenu/ExampleButtons"]
layout_mode = 2
text = "Doom-Like fps"
script = ExtResource("3_jxaps")
scene_to_load = "res://examples/doom_like_fps/levels/test_level.tscn"

[node name="DiabloLike" type="Button" parent="ExamplesMenu/ExampleButtons"]
layout_mode = 2
text = "Diablo-like"
script = ExtResource("3_jxaps")
scene_to_load = "res://examples/diablo_like/diablo_like.tscn"

[node name="TopDown3D" type="Button" parent="ExamplesMenu/ExampleButtons"]
layout_mode = 2
text = "Top down 3D"
script = ExtResource("3_jxaps")
scene_to_load = "res://examples/top_down_3d/top_down_3d.tscn"

[node name="SotLike" type="Button" parent="ExamplesMenu/ExampleButtons"]
layout_mode = 2
text = "SOT-like (sail management)"
script = ExtResource("3_jxaps")
scene_to_load = "res://examples/sot_like/sot_game.tscn"

[node name="TurnBasedTopDown" type="Button" parent="ExamplesMenu/ExampleButtons"]
layout_mode = 2
text = "Turn based top down"
script = ExtResource("3_jxaps")
scene_to_load = "res://examples/turn_based_top_down/turn_based_top_down.tscn"

[node name="HSeparator" type="HSeparator" parent="ExamplesMenu"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2

[node name="PreferencesButton" type="Button" parent="ExamplesMenu"]
layout_mode = 2
text = "Preferences"

[node name="HSeparator2" type="HSeparator" parent="ExamplesMenu"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2

[node name="QuitButton" type="Button" parent="ExamplesMenu"]
layout_mode = 2
text = "Quit GGS"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Preferences" parent="CanvasLayer" instance=ExtResource("4_sr0v6")]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
